# filler

./: CMakeLists.txt  Makefile  README.md  debug_init  debug_strat_map  filler.trace  filler.vizual  input.txt  vdelsie.filler
Includes/: filler.h  filler_vizual.h
SRC/: border_calc.c  border_check.c  border_clear.c  debug.c  debug_files_stratmap_on.c  first_init.c  freedom.c  get_data.c  heat_calc_main.c  heatmap.c  main.c  mini_shape.c  mini_shape_halper.c  put_piece.c  read_input.c  strat_argument.c  strat_calc.c  tools_strat.c
VIS/: color.c  key_hooks.c  render.c
includes/: filler_vizual.h
libft/: ft_abs.c  ft_isprint.c
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/srcs/ft/: ft_atoi.c  ft_bzero.c  ft_convbase.c  ft_countwords.c  ft_exit.c  ft_intlen.c  ft_intlen_base.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lower.c  ft_lstadd.c  ft_lstadd_back.c  ft_putendl.c  ft_putendl2_fd.c  ft_putendl_fd.c  ft_strtrim.c  ft_strupper.c  ft_tabdel.c  ft_tabdup.c  ft_tablen.c  ft_tolower.c  ft_toupper.c  ft_ullintlen.c
libft/srcs/gnl/: get_next_line.c
resources/: filler.trace
resources/maps/: map03
srcs/: main.c  strat_calc.c
vdelsie.filler.dSYM/Contents/Resources/DWARF/: vdelsie.filler
vis/: main.c  read_utils.c  render_str.c
viz/: color.c  render_str.c
