cmake_minimum_required(VERSION 3.15)
project(vdelsy_filler C)

set(CMAKE_C_STANDARD 11)

include_directories(Includes)
include_directories(libft)

add_executable(vdelsy_filler
        Includes/filler.h
        Includes/filler_vizual.h
        libft/ft_abs.c
        libft/ft_atoi.c
        libft/ft_atoi_check.c
        libft/ft_bzero.c
        libft/ft_char_array_del.c
        libft/ft_char_array_length.c
        libft/ft_exp.c
        libft/ft_hex_to_int_check.c
        libft/ft_is_prime.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lst_add_last.c
        libft/ft_lst_at.c
        libft/ft_lst_new_ref.c
        libft/ft_lst_remove_first.c
        libft/ft_lst_size.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_max.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_min.c
        libft/ft_print_bits.c
        libft/ft_print_char_array.c
        libft/ft_printf.c
        libft/ft_printf.h
        libft/ft_printf_a.c
        libft/ft_printf_a_helper.c
        libft/ft_printf_any_char.c
        libft/ft_printf_b.c
        libft/ft_printf_big_c.c
        libft/ft_printf_big_s.c
        libft/ft_printf_c.c
        libft/ft_printf_d.c
        libft/ft_printf_d_helper.c
        libft/ft_printf_e.c
        libft/ft_printf_emoji.c
        libft/ft_printf_f.c
        libft/ft_printf_g.c
        libft/ft_printf_g_helper.c
        libft/ft_printf_k.c
        libft/ft_printf_n.c
        libft/ft_printf_o.c
        libft/ft_printf_p.c
        libft/ft_printf_parser.c
        libft/ft_printf_r.c
        libft/ft_printf_s.c
        libft/ft_printf_styles.c
        libft/ft_printf_u.c
        libft/ft_printf_x.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_puterror.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_round_dbl.c
        libft/ft_round_ldbl.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/libft.h
        libft/skip_next_line.c
        SRC/debug.c
        SRC/freedom.c
        SRC/heatmap.c
        SRC/main.c
        SRC/mini_shape.c
        SRC/mini_shape_halper.c
        SRC/read_input.c)
